# JigenDG

./: pyproject.toml  run_PACS_photo.sh  tox.ini  train_DA_jigsaw.py  train_jigsaw.py  train_jigsaw_evaljig.py
data/: JigsawLoader.py  StandardDataset.py  concat_dataset.py  data_helper.py
data/txt_lists/: CALTECH_test.txt  CALTECH_train.txt  LABELME_test.txt  LABELME_train.txt  PASCAL_test.txt  PASCAL_train.txt  SUN_test.txt  SUN_train.txt  amazon10_test.txt  amazon_test.txt  art_painting_test.txt  cartoon_test.txt  dslr10_test.txt  dslr_test.txt  mnist_m_test.txt  mnist_train.txt  photo_test.txt  sketch_test.txt  synth_digits_test.txt  usps_test.txt  webcam10_test.txt  webcam_test.txt
models/: caffenet.py  model_factory.py  patch_based.py  resnet.py  resnet_gap.py
optimizer/: optimizer_helper.py
test/: test_alexNetCaffe.py
utils/: Logger.py  tf_logger.py
