[tool.poetry]
name = "jigendg"
version = "0.1.0"
description = ""
authors = ["Shunta Komatsu <shuntak217@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.*"
numpy = "^1.21.4"
Pillow = "^8.4.0"
rich = "^10.16.0"
scipy = "^1.7.3"
tensorflow = "^2.7.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
isort = "^5.10.1"
poethepoet = "^0.11.0"
pytest = "^6.2.5"

[tool.black]
line-length = 120

[tool.poe.tasks]
cuda113 = "pip install torch==1.10.0+cu113 torchvision==0.11.1+cu113 -f https://download.pytorch.org/whl/cu113/torch_stable.html"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
